syntax = "proto3";

package zitadel.resources.userschema.v3alpha;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "zitadel/object/v3alpha/object.proto";
import "zitadel/resources/object/v3alpha/object.proto";
import "zitadel/protoc_gen_zitadel/v2/options.proto";
import "zitadel/resources/userschema/v3alpha/user_schema.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/resources/userschema/v3alpha;userschema";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User Schema Service";
    version: "3.0-preview";
    description: "This API is intended to manage data schemas for users in a ZITADEL instance. This project is in preview state. It can AND will continue breaking until the service provides the same functionality as the v1 and v2 user services.";
    contact:{
      name: "ZITADEL"
      url: "https://zitadel.com"
      email: "hi@zitadel.com"
    }
    license: {
      name: "Apache 2.0",
      url: "https://github.com/zitadel/zitadel/blob/main/LICENSE";
    };
  };
  schemes: HTTPS;
  schemes: HTTP;

  consumes: "application/json";
  produces: "application/json";

  consumes: "application/grpc";
  produces: "application/grpc";

  consumes: "application/grpc-web+proto";
  produces: "application/grpc-web+proto";

  host: "$CUSTOM-DOMAIN";
  base_path: "/";

  external_docs: {
    description: "Detailed information about ZITADEL",
    url: "https://zitadel.com/docs"
  }
  security_definitions: {
    security: {
      key: "OAuth2";
      value: {
        type: TYPE_OAUTH2;
        flow: FLOW_ACCESS_CODE;
        authorization_url: "$CUSTOM-DOMAIN/oauth/v2/authorize";
        token_url: "$CUSTOM-DOMAIN/oauth/v2/token";
        scopes: {
          scope: {
            key: "openid";
            value: "openid";
          }
          scope: {
            key: "urn:zitadel:iam:org:project:id:zitadel:aud";
            value: "urn:zitadel:iam:org:project:id:zitadel:aud";
          }
        }
      }
    }
  }
  security: {
    security_requirement: {
      key: "OAuth2";
      value: {
        scope: "openid";
        scope: "urn:zitadel:iam:org:project:id:zitadel:aud";
      }
    }
  }
  responses: {
    key: "403";
    value: {
      description: "Returned when the user does not have permission to access the resource.";
      schema: {
        json_schema: {
          ref: "#/definitions/rpcStatus";
        }
      }
    }
  }
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          ref: "#/definitions/rpcStatus";
        }
      }
    }
  }
};

service ZITADELUserSchemas {

  // Search user schemas
  //
  // Search all matching user schemas. By default, we will return all user schema of your instance. Make sure to include a limit and sorting for pagination.
  rpc SearchUserSchemas (SearchUserSchemasRequest) returns (SearchUserSchemasResponse) {
    option (google.api.http) = {
      post: "/resources/v3alpha/user_schemas/_search"
      body: "filters"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.read"
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200";
        value: {
          description: "A list of all user schema matching the search";
        };
      };
      responses: {
        key: "400";
        value: {
          description: "invalid search";
          schema: {
            json_schema: {
              ref: "#/definitions/rpcStatus";
            };
          };
        };
      };
    };
  }

  // User schema by ID
  //
  // Returns the user schema identified by the requested ID.
  rpc GetUserSchema (GetUserSchemaRequest) returns (GetUserSchemaResponse) {
    option (google.api.http) = {
      get: "/resources/v3alpha/user_schemas/{id}"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.read"
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200"
        value: {
          description: "Schema successfully retrieved";
        }
      };
    };
  }

  // Create a user schema
  //
  // Create the first revision of a new user schema. The schema can then be used on users to store and validate their data.
  rpc CreateUserSchema (CreateUserSchemaRequest) returns (CreateUserSchemaResponse) {
    option (google.api.http) = {
      post: "/resources/v3alpha/user_schemas"
      body: "user_schema"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.write"
      }
      http_response: {
        success_code: 201
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "201";
        value: {
          description: "Schema successfully created";
          schema: {
            json_schema: {
              ref: "#/definitions/v3alphaCreateUserSchemaResponse";
            }
          }
        };
      };
    };
  }

  // Patch a user schema
  //
  // Patch an existing user schema to a new revision. Users based on the current revision will not be affected until they are updated.
  rpc PatchUserSchema (PatchUserSchemaRequest) returns (PatchUserSchemaResponse) {
    option (google.api.http) = {
      patch: "/resources/v3alpha/user_schemas/{id}"
      body: "user_schema"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.write"
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200";
        value: {
          description: "Schema successfully updated";
        };
      };
    };
  }

  // Deactivate a user schema
  //
  // Deactivate an existing user schema and change it into a read-only state. Users based on this schema cannot be updated anymore, but are still able to authenticate.
  rpc DeactivateUserSchema (DeactivateUserSchemaRequest) returns (DeactivateUserSchemaResponse) {
    option (google.api.http) = {
      post: "/resources/v3alpha/user_schemas/{id}/_deactivate"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.write"
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200";
        value: {
          description: "Schema successfully deactivated";
        };
      };
    };
  }

  // Reactivate a user schema
  //
  // Reactivate an previously deactivated user schema and change it into an active state again.
  rpc ReactivateUserSchema (ReactivateUserSchemaRequest) returns (ReactivateUserSchemaResponse) {
    option (google.api.http) = {
      post: "/resources/v3alpha/user_schemas/{id}/_reactivate"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.write"
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200";
        value: {
          description: "Schema successfully reactivated";
        };
      };
    };
  }

  // Delete a user schema
  //
  // Delete an existing user schema. This operation is only allowed if there are no associated users to it.
  rpc DeleteUserSchema (DeleteUserSchemaRequest) returns (DeleteUserSchemaResponse) {
    option (google.api.http) = {
      delete: "/resources/v3alpha/user_schemas/{id}"
    };

    option (zitadel.protoc_gen_zitadel.v2.options) = {
      auth_option: {
        permission: "userschema.delete"
      }
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200";
        value: {
          description: "Schema successfully deleted";
        };
      };
    };
  }
}

message SearchUserSchemasRequest {
  optional zitadel.object.v3alpha.Instance instance = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"domain from HOST or :authority header\""
    }
  ];
  // list limitations and ordering.
  optional zitadel.resources.object.v3alpha.SearchQuery query = 2;
  // The field the result is sorted by. The default is the creation date. Beware that if you change this, your result pagination might be inconsistent.
  optional FieldName sorting_column = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"TARGET_FIELD_NAME_CREATION_DATE\""
    }
  ];
  // Define the criteria to filter for.
  repeated SearchFilter filters = 4;
}

message SearchUserSchemasResponse {
  // Details provides information about the returned result including total amount found.
  zitadel.resources.object.v3alpha.ListDetails details = 1;
  // States by which field the results are sorted.
  FieldName sorting_column = 2;
  // The result contains the user schemas, which matched the queries.
  repeated GetUserSchema result = 3;
}

message GetUserSchemaRequest {
  // unique identifier of the schema.
  string id = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1,
      max_length: 200,
      example: "\"69629026806489455\"";
    }
  ];
}

message GetUserSchemaResponse {
  GetUserSchema user_schema = 2;
}

message CreateUserSchemaRequest {
  optional zitadel.object.v3alpha.Instance instance = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"domain from HOST or :authority header\""
    }
  ];
  UserSchema user_schema = 2;
}

message CreateUserSchemaResponse {
  // Details provide some base information (such as the last change date) of the schema.
  zitadel.resources.object.v3alpha.Details details = 2;
}


message PatchUserSchemaRequest {
  optional zitadel.object.v3alpha.Instance instance = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"domain from HOST or :authority header\""
    }
  ];
  // unique identifier of the schema.
  string id = 2 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1,
      max_length: 200,
      example: "\"69629026806489455\"";
    }
  ];

  PatchUserSchema user_schema = 3;
}

message PatchUserSchemaResponse {
  // Details provide some base information (such as the last change date) of the schema.
  zitadel.resources.object.v3alpha.Details details = 1;
}

message DeactivateUserSchemaRequest {
  optional zitadel.object.v3alpha.Instance instance = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"domain from HOST or :authority header\""
    }
  ];
  // unique identifier of the schema.
  string id = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1,
      max_length: 200,
      example: "\"69629026806489455\"";
    }
  ];
}

message DeactivateUserSchemaResponse {
  // Details provide some base information (such as the last change date) of the schema.
  zitadel.resources.object.v3alpha.Details details = 1;
}

message ReactivateUserSchemaRequest {
  optional zitadel.object.v3alpha.Instance instance = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"domain from HOST or :authority header\""
    }
  ];
  // unique identifier of the schema.
  string id = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1,
      max_length: 200,
      example: "\"69629026806489455\"";
    }
  ];
}

message ReactivateUserSchemaResponse {
  // Details provide some base information (such as the last change date) of the schema.
  zitadel.resources.object.v3alpha.Details details = 1;
}

message DeleteUserSchemaRequest {
  optional zitadel.object.v3alpha.Instance instance = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      default: "\"domain from HOST or :authority header\""
    }
  ];
  // unique identifier of the schema.
  string id = 1 [
    (validate.rules).string = {min_len: 1, max_len: 200},
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      min_length: 1,
      max_length: 200,
      example: "\"69629026806489455\"";
    }
  ];
}

message DeleteUserSchemaResponse {
  // Details provide some base information (such as the last change date) of the schema.
  zitadel.resources.object.v3alpha.Details details = 1;
}


